publishing awesome pages 1611477350977

--- a/expertise.html
+++ b/expertise.html
@@ -7,7 +7,7 @@
      
          <h2>My Expertise in various disciplines </h2>
          
-         <table border=1px cellpadding="2.5px" cellspacing="1.5px" >
+         <table cellpadding="2.5px" cellspacing="5px" >
            <thead>
                <tr>  
                    <th>Technology  </th>
@@ -34,6 +34,10 @@
                <tr> 
                    <td>JavaScript </td>
                    <td>Nothing </td>
+               </tr>
+               <tr>
+                   <td><a href="Photoshop.html" >Photoshopping </td>
+                   <td>Some Basics. Click on the link to see my editings</td>
                </tr>
            </tbody>
          </table>
