--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <table cellspacing="15">
     <tr><td>
-    <img src="images/biopic.jpg" alt=" Sparsh Khanna's biopic" loading="lazy" height=250 width=171.77>
+    <img src="images/biopicEdited.jpeg" alt=" Sparsh Khanna's biopic" loading="lazy" height=250 width=171.77>
     </td>
     <td>
     <h1>Sparsh Khanna </h1>
