--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
             <a href="tel:+917009518347">Call Me  </a>
             <br>
             <br>
+            
+            <a href="sign.html">Create An Account</a> 
+            Or
+            <a href="login.html">Log In  </a>
  
         </p>
      
