--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
     <br>
     
     <p>
-        <center>  
+        <center>
+            <a href="sign.html">Sign In  </a>
+        <br>  
+        <br>  
+            <a href="login.html">Log In  </a> 
+        <br>  
+        <br>  
             <a href="contact.html">Contact Me  </a>
         <br>
         <br>
