--- a/expertise.html
+++ b/expertise.html
@@ -39,6 +39,10 @@
                    <td><a href="Photoshop.html" >Photoshopping </td>
                    <td>Some Basics. Click on the link to see my editings</td>
                </tr>
+               <tr>
+                   <td><a href="animation.html">Video Animation </a>  </td>
+                   <td>Some Basic. Click on the link to see my work.  </td>
+               </tr>
            </tbody>
          </table>
      
