--- a/animation.html
+++ b/animation.html
@@ -8,14 +8,14 @@
         <h2>Video Animations By Me </h2> 
          <center>  
         <video height="180" width="320" controls>
-            <source src="videos/ball-bounce.mp4" type="video/mp4">
+            <source src="ball-bounce.mp4" type="video/mp4">
             The video couldn't been loaded as it is not supported by your browser.
         </video>
         
         <br>  </br>
         
         <video height="180" width="320" controls>
-            <source src="videos/tree.mp4" type="video/mp4">
+            <source src="tree.mp4" type="video/mp4">
             The video couldn't been loaded as it is not supported by your browser.
         </video>
         </center>
