--- a/animation.html
+++ b/animation.html
@@ -15,7 +15,7 @@
         <br>  </br>
         
         <video height="180" width="320" controls>
-            <source src="tree.mp4" type="video/mp4">
+            <source src="Tree.mp4" type="video/mp4">
             The video couldn't been loaded as it is not supported by your browser.
         </video>
         </center>
