Linked to external css

--- a/animation.html
+++ b/animation.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Animations  </title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
  
