Fixed external css bug

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
     <title>Sparsh Khanna </title>   
 
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
