--- a/expertise.html
+++ b/expertise.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Expertise  </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
      
