--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <head>
 
         <title> Contact </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
 
     </head>
 
