--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Log In </title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <center>  
