Fixed image bug
The location for the new biopic was not correct so corrected it

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <tr><td>
 
-    <img src="images/biopicNew.jpeg" alt=" Sparsh Khanna's biopic" loading="lazy" height=250 width=171.77>
+    <img src="biopicNew.jpeg" alt=" Sparsh Khanna's biopic" loading="lazy" height=250 width=171.77>
 
     </td>
 
