--- a/expertise.html
+++ b/expertise.html
@@ -37,11 +37,11 @@
                    <td>Nothing </td>
                </tr>
                <tr>
-                   <td><a href="Photoshop.html" >Photoshopping </td>
+                   <td><a href="expertise/Photoshop.html" >Photoshopping </td>
                    <td>Some Basics. Click on the link to see my editings</td>
                </tr>
                <tr>
-                   <td><a href="animation.html">Video Animation </a>  </td>
+                   <td><a href="expertise/animation.html">Video Animation </a>  </td>
                    <td>Some Basic. Click on the link to see my work.  </td>
                </tr>
            </tbody>
