Updated File locations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Sparsh Khanna </title>   
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -242,19 +242,19 @@
 
         <center>
 
-            <a href="sign.html">Sign In  </a>
+            <a href="forms/sign.html">Sign In  </a>
 
         <br>  
 
         <br>  
 
-            <a href="login.html">Log In  </a> 
+            <a href="forms/login.html">Log In  </a> 
 
         <br>  
 
         <br>  
 
-            <a href="contact.html">Contact Me  </a>
+            <a href="forms/contact.html">Contact Me  </a>
 
         <br>
 
