--- a/expertise/animation.html
+++ b/expertise/animation.html
@@ -2,21 +2,21 @@
 <html>
     <head>
         <title>Animations  </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
  
         <h2>Video Animations By Me </h2> 
          <center>  
         <video height="180" width="320" controls>
-            <source src="videos/ball-bounce.mp4" type="video/mp4">
+            <source src="/videos/ball-bounce.mp4" type="video/mp4">
             The video couldn't been loaded as it is not supported by your browser.
         </video>
         
         <br>  </br>
         
         <video height="180" width="320" controls>
-            <source src="videos/Tree.mp4" type="video/mp4">
+            <source src="/videos/Tree.mp4" type="video/mp4">
             The video couldn't been loaded as it is not supported by your browser.
         </video>
         </center>
