Updated paths + improvements
Updated external css path + added reset button,

--- a/forms/login.html
+++ b/forms/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Log In </title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <center>  
@@ -42,6 +42,7 @@
             
             <center>
                <input type="submit">
+               <input type="reset">
             </center>
             
         </form>
