--- a/forms/signed.html
+++ b/forms/signed.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Signed In</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
         <center>  
