--- a/forms/sign.html
+++ b/forms/sign.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Sign In </title>
-        <link rel="stylesheet" href="Personal-Website/css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
     
