--- a/forms/sign.html
+++ b/forms/sign.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Sign In </title>
-        <link rel="stylesheet" href="https://github.com/SparshKhanna0001/Personal-Website/blob/master/css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
     
