Updated path locations
Updated path locations as supported by the standard but not by GitHub so the GitHub env. may not work appropriately.

--- a/expertise/Photoshop.html
+++ b/expertise/Photoshop.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <title>Photoshop Editings </title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="..?css/styles.css">
     </head>
     <body>
     <center>  
@@ -13,14 +13,14 @@
         <tr>
         
         <td>
-        <img src="/images/biopicEdited.jpeg" alt="Edited biopic" height=250 width=171.77>
+        <img src="../images/biopicEdited.jpeg" alt="Edited biopic" height=250 width=171.77>
         <br>
         <hr size="3px" noshade>
         <center>Edited One </center>
         </td>
         
         <td>
-        <img src="/images/biopic.jpg" alt="original biopic" height=250 width=171.77>        
+        <img src="../images/biopic.jpg" alt="original biopic" height=250 width=171.77>        
         <br>
         <hr size="3px" noshade>
         <center>Original </center>
