Updated path locations
Updated path locations as supported by the standard but not by GitHub so the GitHub env. may not work appropriately.

--- a/PriavcyTerms/privacyterms.html
+++ b/PriavcyTerms/privacyterms.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Terms And Policies  </title>
-	<link rel="stylesheet" href="css/styles.css" >
+	<link rel="stylesheet" href="../css/styles.css" >
     </head>
     <body>
     <h1>Privacy Policy for Company Name</h1>
@@ -103,8 +103,8 @@
 
 <p> <center>  
 <br>  </br>
-<a href="/forms/sign.html">Go Back To Sign In </a> <br> <br> 
-<a href="/index.html">Go To Main Page </a>
+<a href="../forms/sign.html">Go Back To Sign In </a> <br> <br> 
+<a href="../index.html">Go To Main Page </a>
 <br>  </br></center>
 </p>
 <footer>  
