--- a/forms/login.html
+++ b/forms/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Log In </title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <center>  
@@ -50,7 +50,7 @@
         <br>  </br>
         <br>  </br>
         
-        <a href="/index.html"> Go To Main Page  </a>
+        <a href="../index.html"> Go To Main Page  </a>
 
     </body> 
 </html>
