--- a/forms/contact.html
+++ b/forms/contact.html
@@ -4,7 +4,7 @@
     <head>
 
         <title> Contact </title>
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
 
     </head>
 
@@ -84,7 +84,7 @@
 
                                        
 
-     <a href="/index.html">Go Back</a>   
+     <a href="../index.html">Go Back</a>   
 
           
 
